JumpScript/tests/baselines/reference/transpile/Generates expected syntactic diagnostics.oldTranspile.errors.txt
file.jump(1,3): error TS1005: ';' expected.


==== file.jump (1 errors) ====
    a b
      ~
!!! error TS1005: ';' expected.